[gd_scene load_steps=11 format=3 uid="uid://di7wffcl0ey3o"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Garden Center/PlantCaringMinigame/plant_caring.gd" id="1_mjkcf"]
[ext_resource type="Texture2D" uid="uid://c72xamnljg6m7" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/room_placeholder.png" id="1_s0435"]
[ext_resource type="PackedScene" uid="uid://dt8p5adk2f06v" path="res://Scenes and Scripts/Game/Garden Center/PlantCaringMinigame/plant.tscn" id="2_72lyy"]
[ext_resource type="FontFile" uid="uid://cndjys5rae2ut" path="res://Assets/Font/digital-7.ttf" id="3_48ksc"]
[ext_resource type="PackedScene" uid="uid://c53c8e22d528s" path="res://Scenes and Scripts/Game/Garden Center/PlantCaringMinigame/watering_can.tscn" id="4_cx1dw"]
[ext_resource type="PackedScene" uid="uid://brcdcnmm5e2em" path="res://Scenes and Scripts/Game/Garden Center/PlantCaringMinigame/insect_spray.tscn" id="6_61pj5"]
[ext_resource type="Texture2D" uid="uid://cteydrkongfdc" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/plusbuttonplaceholder.png" id="7_2n4t6"]
[ext_resource type="Texture2D" uid="uid://dmauooyvr5rqx" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/minusbuttonplaceholder.png" id="8_lti52"]
[ext_resource type="Texture2D" uid="uid://bp24i4cfoqioc" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/potentiometer.png" id="9_r43fh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jmua4"]
radius = 162.338

[node name="Plant Caring" type="Node2D"]
script = ExtResource("1_mjkcf")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_s0435")

[node name="Plant" parent="." instance=ExtResource("2_72lyy")]
position = Vector2(1304, 673)

[node name="Label" type="Label" parent="."]
offset_left = 1393.0
offset_top = 62.0
offset_right = 2020.0
offset_bottom = 566.0
theme_override_colors/font_color = Color(0, 0.968627, 0, 1)
theme_override_fonts/font = ExtResource("3_48ksc")
theme_override_font_sizes/font_size = 36
text = "Name: Pflanzus Latein
Name in Bev√∂lkerung: Rose
Funfacts: 





Anforderungen:
Luftfeuchtigkeit: 1.5 ml
Luftdruck: 3 bar
Bodenfeuchtigkeit: 50 ml
Insektenbefall: 10 Insekten"

[node name="Watering Can" parent="." instance=ExtResource("4_cx1dw")]
position = Vector2(1507, 859)

[node name="Insect Spray" parent="." instance=ExtResource("6_61pj5")]
position = Vector2(262, 849)

[node name="Humidity" type="Node2D" parent="."]
position = Vector2(495, 266)

[node name="PlusHumidity" type="TextureButton" parent="Humidity"]
offset_left = 176.0
offset_top = -79.0
offset_right = 246.0
offset_bottom = -9.0
texture_normal = ExtResource("7_2n4t6")

[node name="MinusHumidity" type="TextureButton" parent="Humidity"]
offset_left = -127.0
offset_top = -74.0
offset_right = -57.0
offset_bottom = -4.0
texture_normal = ExtResource("8_lti52")

[node name="Label" type="Label" parent="Humidity"]
offset_left = -33.0
offset_top = -83.0
offset_right = 146.0
offset_bottom = -4.0
theme_override_colors/font_color = Color(0, 0.968627, 0, 1)
theme_override_fonts/font = ExtResource("3_48ksc")
theme_override_font_sizes/font_size = 101
text = "70 %"

[node name="Temperature" type="Node2D" parent="."]

[node name="40" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/40"]
polygon = PackedVector2Array(512, 617, 409, 616, 347, 618, 359, 558)

[node name="35" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/35"]
polygon = PackedVector2Array(417, 574, 515, 614, 405, 490, 362, 552)

[node name="30" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/30"]
polygon = PackedVector2Array(449, 536, 517, 611, 456, 455, 409, 487)

[node name="25" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/25"]
polygon = PackedVector2Array(521, 609, 519, 507, 521, 441, 459, 454)

[node name="20" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/20"]
polygon = PackedVector2Array(523, 443, 584, 453, 525, 609, 524, 506)

[node name="15" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/15"]
polygon = PackedVector2Array(588, 455, 653, 502, 528, 612, 565, 516)

[node name="10" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/10"]
polygon = PackedVector2Array(606, 545, 535, 612, 682, 550, 654, 506)

[node name="5" type="Area2D" parent="Temperature"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Temperature/5"]
polygon = PackedVector2Array(626, 575, 532, 617, 694, 617, 685, 553)

[node name="TemperatureRegulator" type="Sprite2D" parent="Temperature"]
position = Vector2(523, 616)
scale = Vector2(0.616034, 0.590414)
texture = ExtResource("9_r43fh")

[node name="Area2D" type="Area2D" parent="Temperature/TemperatureRegulator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Temperature/TemperatureRegulator/Area2D"]
position = Vector2(6.49315, -1.69383)
shape = SubResource("CircleShape2D_jmua4")

[connection signal="button_down" from="Humidity/PlusHumidity" to="." method="_on_plus_humidity_button_down"]
[connection signal="button_down" from="Humidity/MinusHumidity" to="." method="_on_minus_humidity_button_down"]
